--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Lemonade</string>
-    <string name="lemon_select">Tap the lemon tree to select a lemon</string>
+    <string name="app_name">Limonada Directa</string>
+    <string name="lemon_select">Presiona el arbol de limon y escoge un limon</string>
     <string name="lemon_squeeze">Keep tapping the lemon to squeeze it</string>
-    <string name="lemon_drink">Tap the lemonade to drink it</string>
-    <string name="lemon_empty_glass">Tap the empty glass to start again</string>
-    <string name="lemon_tree_content_description">Lemon tree</string>
-    <string name="lemon_content_description">Lemon</string>
-    <string name="lemonade_content_description">Glass of lemonade</string>
-    <string name="empty_glass_content_description">Empty glass</string>
+    <string name="lemon_drink">Presiona la limonada para beberla </string>
+    <string name="lemon_empty_glass">Presiona el vaso vacio para volver hacer otra limonada</string>
+    <string name="lemon_tree_content_description">Arbol de limon</string>
+    <string name="lemon_content_description">Limon</string>
+    <string name="lemonade_content_description">Vaso de limonada</string>
+    <string name="empty_glass_content_description">Vaso vacio</string>
 </resources>
